--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a href="data/CV_ShiweiHE.pdf">CV</a> &nbsp/&nbsp
                 <a href="data/ShiweiHE-bio.txt">Bio</a> &nbsp/&nbsp
                 <a href="https://space.bilibili.com/337084275/video">Bilibili</a> &nbsp/&nbsp
-                <a href="https://github.com/CalvinStarrio">Github</a>
+<!--                 <a href="https://github.com/CalvinStarrio">Github</a> -->
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
