--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               </p>
               <br>
               <p style="text-align:center">
-                <a href="mailto:shiweihe0713@163.com">Email</a> &nbsp/&nbsp
+                <a href="mailto:shiwei.he@cs.nyu.edu">Email</a> &nbsp/&nbsp
                 <a href="data/CV_Shiwei HE.pdf">CV</a> &nbsp/&nbsp
                 <a href="data/ShiweiHE-bio.txt">Bio</a> &nbsp/&nbsp
                 <a href="https://space.bilibili.com/337084275/video">Bilibili</a>
