Update my summary

--- a/index.html
+++ b/index.html
@@ -20,12 +20,9 @@
               <p style="text-align:center">
                 <name>Shiwei HE</name><name>「何世伟」</name>
               </p>
-              <p>I am a graudate from <a href="https://english.cumtb.edu.cn/">China University of Mining & Technology-Beijing (CUMTB)</a>, major in Safety Engineering, and minor in Computer Science & Technology.
-              </p>
+              <p>I am a graduate student at <a href="https://courant.nyu.edu/">NYU Courant</a>, major in Information Systems.</p>
               <p>
-                During college, I've worked on <a href="https://iopscience.iop.org/article/10.1088/1742-6596/1903/1/012031">Disentanglement of feature vectors in generated human face<image class="" src="" mode="aspectFit|aspectFill|widthFix" lazy-load="false" binderror="" bindload="">
-                  
-                </image></a>, advised by <a href="https://jdxy.cumtb.edu.cn/info/1013/1377.htm">Prof. Faguo Zhou</a>. I also use computer science to solve many engineering problems relate to production safety.
+                My interests are full-stack web development, software engineering, machine learning, and last but not least music technology!
               </p>
               <br>
               <p style="text-align:center">
